# template_pylib

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  setup.cfg  setup.py
__PROJECT_NAME__/: __PROJECT_NAME__.hpp  ___PROJECT_NAME__.cxx  ___PROJECT_NAME__.py  main.cpp
cmake/: LICENSE  pydebug.cmake
cmake/example/core/: HISTORY.md  LICENSE
cmake/example/core/simple-executable/: CMakeLists.txt
cmake/example/core/simple-librarylink/: CMakeLists.txt
tests/: test___PROJECT_NAME__.py
