;; # https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = __PROJECT_NAME__
version = file: VERSION
url = https://github.com/kirin123kirin/__PROJECT_NAME__
author = kirin123kirin
# author_email = #@todo
description = __PROJECT_NAME__ description
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_files = LICENSE
platforms = any

; # https://pypi.org/classifiers/
#@todo
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Environment :: Console
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

#@todo
keywords = one, two

#@todo
[options]
zip_safe = False
install_requires =
  setuptools>=42
  wheel
  scikit-build>=0.12
  cmake>=3.18

; # https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
include_package_data = True
packages = find:
# package_dir =
#     =__PROJECT_NAME__

# [options.packages.find]
# where = __PROJECT_NAME__
# include = 
#   inc*
# exclude =
#   exc*

#@todo
[options.extras_require]
test =
    pytest
    pytest-cov
    psutil

[build]
build_temp = build
build_base = build
build_platlib = build


[tool:pytest]
addopts = --capture=no -s -p no:cacheprovider
testpaths = tests


[aliases]
test=pytest


[flake8]
ignore = E302,W504,E402,F401,C901
max-line-length = 160
exclude = tests/*,test/*,.*,extern/*,build/*
max-complexity = 10

